--- a/SitoIUM/nbproject/project.properties
+++ b/SitoIUM/nbproject/project.properties
@@ -1,8 +1,11 @@
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
-config.folder=${file.reference.HTML5Application-config}
+config.folder=${file.reference.SitoIUM-config}
 file.reference.HTML5Application-config=config
 file.reference.HTML5Application-public_html=public_html
 file.reference.HTML5Application-test=test
+file.reference.IUM-SitoIUM=.
+file.reference.SitoIUM-config=config
+file.reference.SitoIUM-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.HTML5Application-public_html}
-test.folder=${file.reference.HTML5Application-test}
+site.root.folder=${file.reference.IUM-SitoIUM}
+test.folder=${file.reference.SitoIUM-test}
