--- a/SitoIUM/nbproject/project.properties
+++ b/SitoIUM/nbproject/project.properties
@@ -1,5 +1,11 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
-config.folder=${file.reference.SitoIUM-config}
+config.folder=
 file.reference.HTML5Application-config=config
 file.reference.HTML5Application-public_html=public_html
 file.reference.HTML5Application-test=test
@@ -8,4 +14,4 @@ file.reference.SitoIUM-config=config
 file.reference.SitoIUM-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.IUM-SitoIUM}
-test.folder=${file.reference.SitoIUM-test}
+test.folder=
